--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,7 @@ dependencies {
 
     // Coroutines for asynchronous programming
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+
+    // fix unresolved reference of observeAsState
+    implementation 'androidx.compose.runtime:runtime-livedata:1.0.5'
 }
