--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.example.jetpackwithmvvmandretrofit'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.jetpackwithmvvmandretrofit"
@@ -74,4 +74,7 @@ dependencies {
 
     // fix unresolved reference of observeAsState
     implementation 'androidx.compose.runtime:runtime-livedata:1.0.5'
+
+    // Coil
+    implementation 'io.coil-kt:coil-compose:2.5.0'
 }
